# build_lib

./: CMakeLists.txt
include/nagisa/build_lib/: config.h  construct.h  destruct.h
include/nagisa/build_lib/details/: detail.h  name.h  root.h  version.h
